# memory-tap-skills

./: .gitignore  BUILDING.md  README.md  build_exe.py  install.py  manifest.json  memory_tap.py  memory_tap.spec  pyproject.toml  requirements.txt
_scripts/: functional_audit.py  live_test_chatgpt.py  live_test_gemini.py  live_test_youtube.py
skills/: chatgpt_history.py  chatgpt_inference.py  gemini_history.py  google_activity.py  interest_timeline.py  youtube_history.py
src/: __init__.py  __main__.py  cdp_client.py  chrome_manager.py  human.py  scheduler.py  service_worker.py
src/dashboard/: app.py
src/dashboard/static/: index.html  interest_timeline.html
src/db/: core_db.py  models.py  skill_db.py  sync_tracker.py
src/rag/: chat.py  search.py
src/skills/: base.py  ui_manifest.py
src/updater/: skill_updater.py
