[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-tap"
version = "0.1.0"
description = "Personal knowledge collector — collects your ChatGPT, Gemini, YouTube history into a local searchable database"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Vysakh R Nambiar"}]

dependencies = [
    "websocket-client>=1.6.0",
    "requests>=2.31.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pystray>=0.19.0",
    "Pillow>=10.0.0",
]

[project.scripts]
memory-tap = "src.__main__:main"

[project.gui-scripts]
memory-tap-gui = "src.__main__:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.setuptools.package-data]
"src.dashboard" = ["static/*"]
